[package]
name = "foreman"
description = "Toolchain manager for simple binary tools"
version = "1.0.5"
authors = [
  "Lucien Greathouse <me@lpghatguy.com>",
  "Matt Hargett <plaztiksyke@gmail.com>",
]
license = "MIT"
homepage = "https://github.com/Roblox/foreman#readme"
repository = "https://github.com/Roblox/foreman"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command-group = "1.0.8"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
rpassword = "5.0.1"
serde_json = "1.0"
structopt = "0.3.26"
toml = "0.5.8"
toml_edit = "0.13.0"
urlencoding = "2.1.0"
zip = "0.5"

[dev_dependencies]
assert_cmd = "2.0.2"
insta = "1.10.0"
tempfile = "3.3.0"
