[package]
edition.workspace = true
name = "artiaa_auth"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"

[dev-dependencies]
tempfile = "3.3.0"
jsonschema-valid = "0.5.1"
